# TD5

./: CMakeLists.txt  TD5.sln  cmake_cours.cmake  livres.txt  structures.hpp  td2.vcxproj  td2.vcxproj.filters  td5.cpp
bibliotheque_cours/: verification_allocation.cpp
include/: CodeCoverage_bugfix.h  debogage_memoire.hpp  verification_allocation.hpp
include/cppitertools/: zip.hpp
